spacing fixes

--- a/big-game/src/app/horse-page/horse-page.component.css
+++ b/big-game/src/app/horse-page/horse-page.component.css
@@ -153,6 +153,27 @@
     border-radius: 10px;
 }
 
+.energyBar {
+    width: 1%;
+    height: 15px;
+    border: 1px solid #663300;
+    background: linear-gradient( 90deg, rgba(242, 6, 6, 1) 0%, rgba(247, 244, 5, 1) 50%, rgba(0, 255, 29, 1) 100%);
+}
+
+.moraleBar {
+    width: 1%;
+    height: 15px;
+    border: 1px solid #663300;
+    background: linear-gradient( 90deg, rgba(242, 6, 6, 1) 0%, rgba(247, 244, 5, 1) 50%, rgba(0, 255, 29, 1) 100%);
+}
+
+.healthBar {
+    width: 1%;
+    height: 15px;
+    border: 1px solid #663300;
+    background: linear-gradient( 90deg, rgba(242, 6, 6, 1) 0%, rgba(247, 244, 5, 1) 50%, rgba(0, 255, 29, 1) 100%);
+}
+
 
 /*equip my horse*/
 
